--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,30 +9,30 @@ readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = ["License :: OSI Approved :: MIT License"]
 requires-python = ">=3.7"
-version = "0.6.0"
+version = "0.6.1"
 dynamic = ["description"]
 keywords = ["DNN", "neural network", "verification"]
 dependencies = [
     "lark~=1.0",
-    "numpy>=1.20,<1.22",
-    "onnx>=1.8,<1.11",
+    "numpy>=1.20",
+    "onnx>=1.10",
     "onnxruntime~=1.8",
     "psutil~=5.6",
-    "scikit-image>=0.18,<0.19",
+    "scikit-image>=0.18",
     "scipy~=1.7",
-    "tensorflow>=2.2,<2.8",
+    "tensorflow>=2.2",
 ]
 
 [project.optional-dependencies]
 all = [
     # default
     "lark~=1.0",
-    "numpy>=1.20,<1.22",
-    "onnx>=1.8,<1.11",
+    "numpy>=1.20",
+    "onnx>=1.8",
     "psutil~=5.6",
-    "scikit-image>=0.18,<0.19",
+    "scikit-image>=0.18",
     "scipy~=1.7",
-    "tensorflow>=2.2,<2.8",
+    "tensorflow>=2.2",
     # test
     "coverage~=5.5",
     "pytest~=6.2",
